# compliance-pipeline

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt
.github/workflows/: c2p.yml  cleanup.yml
compliance_pipeline/: c2p.py  main.py  p2c.py
compliance_pipeline/c2p_plugin/: kyverno.py
data/: component-definition.csv
deployment/: application-remediated.yaml  application.yaml  bad-application.yaml  good-application.yaml
docker/self-hosted-runner/: Dockerfile  README.md  entrypoint.sh
pipeline/: .gitignore  assessment-results.json  assessment-results.md  component-definition.csv  component-definition.enforce.csv  component-definition.json
pipeline/policy/require-tls-on-ingress/: require-tls-on-ingress.yaml
pipeline/policy/require-tls-on-ingress-enforced/: enforce-tls-on-ingress.yaml
script/: get-ingress.sh
